--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,7 @@
     display: table;
 }
 
+
 body {
     font-family: 'futura', 'futura LT', 'Tw Cen Mt', 'Century Gothic', 'Gill sans', sans-serif;
     color: white;
@@ -58,7 +59,7 @@ body {
 
             #namespace {
                 padding: 20px;
-                width: 250px;
+                width: 270px;
 
                  #extra_info {
                      visibility: hidden;
@@ -67,6 +68,7 @@ body {
                     color: white;
                     text-decoration: none;
                 }
+
             }
 
             #namespace:hover {
@@ -98,8 +100,12 @@ body {
     }
 
     #menu {
-        float: right;
+        //float: right;
         padding: 20px;
+        position: fixed;
+        right: 0;
+        z-index: 1000;
+
         li {
             font-size: 1.2em;
             line-height: 100%;
@@ -107,12 +113,12 @@ body {
             list-style: none;
             padding: 15px 0 5px;
             width: 100%;
-            overflow: visible;
-
 
             a {
                 text-decoration: none;
                 color: white;
+                z-index: 100;
+
             }
         }
 
@@ -122,8 +128,8 @@ body {
        
     }
 
-    .scroll-down{
-        position: fixed;
+    #scroll-down{
+        position: absolute;
         bottom: 5vh;
         left: 50%;
         margin-left: -45px;
@@ -132,7 +138,7 @@ body {
 
     #reel {
         height: 100vh;
-        width: 1136px;
+        width: 100%;
         margin: auto;
         h2 {
             margin: 40px;
@@ -140,16 +146,18 @@ body {
         }        
 
         iframe {
-            position: relative;
+            width: 100%;
+            /*position: relative;
             left: 50%;
-            margin-left: -480px;
+            margin-left: -480px;*/
         }
     }
     
     #work {
-        width: 1136px;
+        width: 100%;
         height: 100vh;
         margin: auto;
+        clear: both;
 
         h2{
             margin: 40px;
@@ -158,10 +166,10 @@ body {
 
         .portfolio-item {
             width: 268px;
-            height: 268px;
+            //height: 268px;
             float: left;
-            //background-image: url('/images/covers/luminous_cover.png');
             background-position: 0% 0%;
+            background-size: 200% 100%;
             margin: 8px;
 
             a {
@@ -172,15 +180,30 @@ body {
 
         }
 
+
+
+        @media only screen and (max-width: 550px) {
+            .portfolio-item {
+                width: 45%;
+            }
+        }
+
+        .portfolio-item:after {
+            display: block;
+            padding-bottom: 100%;
+        }
+
+
         div:hover {
             background-position: 100% 0%;
+            cursor: pointer;
         }
     }
 footer {
-    width: 1136px;
+    width: 100%;
     margin: 50px auto;
     border-top: 1px solid white;
-    padding: 10px;
+    padding: 10px 0;
 
     .kolom {
         width: 33%;
@@ -203,7 +226,7 @@ footer {
                 width: 250px;
 
                 #extra_info {
-                    visibility: hidden;
+                    display:none;
                 }
                 a {
                     color: white;
@@ -213,7 +236,7 @@ footer {
 
             #namespace:hover {
                 #extra_info {
-                    visibility: visible;
+                    display: block;
                 }
                 
             }
@@ -231,7 +254,7 @@ footer {
         }
 
         .pagecontent {
-            width: 1136px;
+            width: 100%;
             margin: auto;
 
             .title {
@@ -249,6 +272,24 @@ footer {
             }
         }
 
+    }
+
+    #contact {
+        clear: both;
+        h2 {
+            margin: 40px;
+            text-align: center;
+        }
+        p {
+            text-align: center;
+
+        }
+        a {
+            font-size: 2em;
+            text-decoration: none;
+            color: white;
+            font-weight: 600;
+        } 
     }
 
 }
