--- a/OLD/_includes/header.html
+++ b/OLD/_includes/header.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Jelle Dutry</title>
+    <title>jelle dutry</title>
     <meta name="description" content="Portfolio site for Jelle Dutry">
     <meta name="author" content="Jelle Dutry">
     <meta name="copyright" content="Copyright Jelle Dutry">
