--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,12 +4,12 @@
         © Jelle Dutry 2018<br>      
     </div>
     <div class="kolom">
-        ♥
+        <p></p>
     </div>
     <div class="kolom">
         <a href="https://vimeo.com/jelledutry"><img src="/images/vimeo.png" class="icon"></a>
         <a href="http://facebook.com/jelle.dutry"><img src="/images/facebook.png" class="icon"></a>
-        <a href="mailto:jelledy@gmail.com"><img src="/images/mail.png" class="icon"></a>
+        <a href="mailto:jelle.dutry@gmail.com"><img src="/images/mail.png" class="icon"></a>
     </div>
 </footer>
 
