--- a/css/main.scss
+++ b/css/main.scss
@@ -47,16 +47,6 @@ body {
                 line-height: 40%;
             }
 
-            #extra_info {
-                width: 220px;
-                padding: 0;
-                margin: 50px 0 0 0;
-                list-style-type: none;
-                li {
-                    margin: 20px 0;;
-                }
-            }
-
             #namespace {
                 padding: 20px;
                 width: 270px;
@@ -69,42 +59,40 @@ body {
                     text-decoration: none;
                 }
 
-            }
-
-            #namespace:hover {
-                 #extra_info {
-                    visibility: visible;
+                @media only screen and (max-width: 680px) {
+                    position: unset;
+                    margin: auto;
+                    width: 100%;
+                    padding: 0;
+                    text-align: center;
                 }
+
             }
 
         }
-        
 
-
-            #tagline{
-                position: absolute;
-                //top: 0;
-                left: 0;
-                width: 100%;
-                margin: 0 auto;
-                z-index: -9999;
-                /*
-                h2 {
-                    text-align: center;
-                    font-size: 200%;
-                }
-                */
-
-            }
-
+        #tagline {
+            position: relative;
+        }
     }
 
     #menu {
+
+        img {
+            width: 50px;
+            float: right;
+        }
+
         //float: right;
-        padding: 20px;
+        padding: 0 10px 0 0;
         position: fixed;
         right: 0;
         z-index: 1000;
+
+        ul {
+            visibility: hidden;
+        }
+
 
         li {
             font-size: 1.2em;
@@ -125,8 +113,9 @@ body {
         li:hover{
             border-bottom: 1px solid white
         }
-       
+
     }
+
 
     #scroll-down{
         position: absolute;
@@ -137,7 +126,7 @@ body {
     }
 
     #reel {
-        height: 100vh;
+        //height: 100vh;
         width: 100%;
         margin: auto;
         h2 {
@@ -155,7 +144,7 @@ body {
     
     #work {
         width: 100%;
-        height: 100vh;
+        //height: 100vh;
         margin: auto;
         clear: both;
 
@@ -180,13 +169,21 @@ body {
 
         }
 
-
+        @media only screen and (max-width: 1136px) {
+            max-width: 820px;
+            .portfolio-item {
+                width: 30%;
+                margin: 1.5%;
+            }
+        }
 
         @media only screen and (max-width: 550px) {
             .portfolio-item {
                 width: 45%;
+                margin: 2%;
             }
         }
+
 
         .portfolio-item:after {
             display: block;
@@ -282,14 +279,100 @@ footer {
         }
         p {
             text-align: center;
-
         }
-        a {
-            font-size: 2em;
-            text-decoration: none;
-            color: white;
-            font-weight: 600;
-        } 
+
+        #contactBox {
+            display: block;
+            width: 680px;
+            margin: auto;
+        }
+
+        @media only screen and (max-width: 680px) {
+            #contactBox {
+                width: 100%;
+            }
+        }
+
+        form {
+            display: block;
+            margin: 20px auto;
+            width: 400px;
+            float: left;
+            padding: 20px;
+        }
+
+        form input {
+            display: block;
+            width: 360px;
+            margin: 20px auto;
+            padding: 3px 10px;
+            border: none;
+            border-radius: 5px;
+            font-family: 'futura', 'futura LT', 'Tw Cen Mt', 'Century Gothic', 'Gill sans', sans-serif;
+        }
+
+        form input[type="submit"] {
+            width: 200px;
+            color: #0064d4;
+            background-color: white;
+            font-weight: 400;
+        }
+
+        form textarea {
+            display: block;
+            margin: 20px auto;
+            padding: 3px 10px;
+            width: 360px;
+            height: 180px;
+            border: none;
+            border-radius: 5px;
+            font-family: 'futura', 'futura LT', 'Tw Cen Mt', 'Century Gothic', 'Gill sans', sans-serif;
+        }
+
+        @media only screen and (max-width: 680px) {
+            form {
+                float: none;
+                width: 90%;
+            }
+
+            form input {
+                width: 90%;
+            }
+            
+            form textarea {
+                width: 90%;
+            }
+
+            form input[type="submit"] {
+                width: 50%;
+            }
+        }
+
+        ul {
+            display: block;
+            width: 200px;
+            float: left;
+            padding: 20px;
+            margin: 20px auto;
+
+            li {
+                list-style-type: none;
+                text-align: center;
+                margin: 10px 0;
+
+                a {
+                    text-decoration-line: none;
+                    color: white;
+                }
+            }
+        }
+
+        @media only screen and (max-width: 680px) {
+            ul {
+                float: none;
+            }
+        }
+
     }
 
 }
