--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,7 +39,6 @@
         <h2>my work</h2>
         {% for item in site.work %}
         <div class="portfolio-item cf" style="background-image: url('{{item.cover}}')" onclick="window.location.replace('{{site.url}}{{ item.url }}')">
-                <!--<a  href="{{site.url}}{{ item.url }}"></a>-->
         </div>
         {% endfor %}
 </div>
@@ -51,12 +50,8 @@
                 <li>07/07/1995</li>
                 <li>Scheldewindeke</li>
                 <li>Belgium</li>
-                <li><i>Motiondesign, live-visuals, projectionmapping, animation</i></li>
-                <li>Ik heb Grafische en Digitale media gestudeerd aan de Artevelde Hogeschool in Mariakerke. 
-                        Ik heb mij daarin toegespitst op motiongraphics en motiondesign. <br>Ik maak hoofdzakelijk korte
-                        videos met allerlei functies. Dit gaat van muziekvideos, live-visuals tot reclamefilmpjes. 
-                        Heb je interesse in mijn werk, laat dan zeker iets van je horen en dan bespreken we de details.
-                </li>
+                <li>I design and animate your next advertisement or online video. Whatever the need, I will create the perfect video for you.</li>
+                <li>Beside advertisements I also create live-visuals, projectionmapping and music videos. </li>
         </ul>
 
 </div>
