--- a/css/main.scss
+++ b/css/main.scss
@@ -410,4 +410,12 @@ footer {
 
     }
 
+    .page404 {
+        display: block;
+        width: 50%;
+        max-width: 540px;
+        margin: auto;
+
+    }
+
 }
