--- a/_includes/section-reel.html
+++ b/_includes/section-reel.html
@@ -4,7 +4,9 @@
       <div class="row">
         <div class="col col-12">
           <div class="hero__inner">
-            <iframe src="https://player.vimeo.com/video/558776526?h=3fbca703c1" width="100%" height="540" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+            <div class="reel-container">
+              <iframe src="https://player.vimeo.com/video/558776526?h=3fbca703c1" width="100%" height="540vpx" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+            </div>
           </div>
         </div>
       </div>
