--- a/_sass/3-modules/_section-hero.scss
+++ b/_sass/3-modules/_section-hero.scss
@@ -41,4 +41,21 @@
       font-size: inherit;
     }
   }
+
+  .reel-container {
+    position: relative;
+    padding-bottom: 80%;
+    padding-top: 0;
+    height: 0;
+    overflow: hidden;
+  }
+
+  .video-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
 }
