--- a/_sass/3-modules/_section-hero.scss
+++ b/_sass/3-modules/_section-hero.scss
@@ -50,7 +50,7 @@
     overflow: hidden;
   }
 
-  .video-container iframe {
+  .reel-container iframe {
     position: absolute;
     top:0;
     left: 0;
